build.gradle: Tweaking with vmargs.